--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,8 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongodb": "^5.9.1",
+    "mongoose": "^8.10.0",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
